--- a/portal-dniprorada/client/app/main/main.html
+++ b/portal-dniprorada/client/app/main/main.html
@@ -1,17 +1,13 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <img src="assets/images/explorer-logo.png" alt="Dniprorada logo">
-  </div>
-</header>
+<div ng-include="'components/banner/banner.html'"></div>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Бізнес-процеси:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="processDefinition in processDefinitions">
-        <li><a href="#" tooltip="{{processDefinition.description}}">{{processDefinition.name}}</a></li>
+        <li><a href="/process-form/{{processDefinition.id}}" tooltip="{{processDefinition.description}}">{{processDefinition.name}}</a></li>
       </ul>
     </div>
   </div>
