--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -7,7 +7,7 @@
       <h1 class="page-header">This is the process-form view for {{processDefinitionId}}</h1>
   	</div>  
   	<div class="col-lg-12">
-  		Here should be form
+  		<processStartForm formData="processFormData"/>
   	</div>
   </div>
 </dib>
