--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -6,8 +6,14 @@
   	<div class="col-lg-12">
       <h1 class="page-header">This is the process-form view for {{processDefinitionId}}</h1>
   	</div>  
-  	<div class="col-lg-12">
-  		<processStartForm formData="processFormData"/>
-  	</div>
+  	<div class="col-sm-12">
+      <form class="form" name="form" ng-submit="startProcess(form)" novalidate>
+		<div class="form-group" ng-repeat="formProperty in processFormData.formProperties">
+        <label>{{formProperty.name}}</label>
+        <input type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
+        </div>
+        <button class="btn btn-lg btn-primary" type="submit">Start process</button>
+      </form>
+    </div>
   </div>
 </dib>
