--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
   	<div class="col-lg-12">
-      <h1 class="page-header">Будь-ласка заповніть форму {{processDefinitionId}}</h1>
+      <h1 class="page-header">Будь ласка заповніть форму {{processDefinitionId}}</h1>
   	</div>  
   	<div class="col-sm-12">
       <form class="form" name="form" ng-submit="startProcess(form)" novalidate>
