--- a/portal-dniprorada/client/app/main/main.html
+++ b/portal-dniprorada/client/app/main/main.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Бізнес-процеси:</h1>
+      <h1 style="display: none;" class="page-header">Бізнес-процеси:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="processDefinition in processDefinitions">
         <li><a href="/process-form/{{processDefinition.id}}" tooltip="{{processDefinition.description}}">{{processDefinition.name}}</a></li>
       </ul>
@@ -14,7 +14,7 @@
 </div>
 
 <footer class="footer">
-  <div class="container">
+  <div style="display: none;" class="container">
       <p>e-government-ua v0.0.1 |
         <a href="https://github.com/e-government-ua">@e-government-ua</a>
       </p>
