first part of bankID auth, without getting user info

--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -13,7 +13,7 @@
         <input type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
         </div>
          <button class="btn btn-lg btn-primary" ng-click="authorize()">Ідентифікация BankID</button>
-        <button class="btn btn-lg btn-primary" type="submit" ng-disabled="disble_start_process">Подати заявку</button>       
+        <button class="btn btn-lg btn-primary" type="submit" ng-disabled="disbleStartProcess">Подати заявку</button>       
       </form>
     </div>
   </div>
