--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -8,13 +8,18 @@
   	</div>  
   	<div class="col-sm-12">
       <form class="form" name="form" ng-submit="startProcess(form)" novalidate>
-		<div class="form-group" ng-repeat="formProperty in processFormData.formProperties">
-        <label>{{formProperty.name}} <label ng-show="{{formProperty.datePattern}}"> in format : {{formProperty.datePattern}}</label></label>
-        <input type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
+        <div class="form-group" ng-repeat="formProperty in processFormData.formProperties">
+            <div ng-if="{{formProperty.id}} != docType">
+                <label>{{formProperty.name}} <label ng-show="{{formProperty.datePattern}}"> in format : {{formProperty.datePattern}}</label></label>
+                <input type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
+            </div>          
+            <div ng-if="{{formProperty.id}} == docType">
+                (комбо-бокс)
+            </div>          
         </div>
          <button class="btn btn-lg btn-primary" ng-click="authorize()">Ідентифікация BankID</button>
         <button class="btn btn-lg btn-primary" type="submit" ng-disabled="disbleStartProcess">Подати заявку</button>       
       </form>
     </div>
   </div>
-</dib>
+</div>
