--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -9,11 +9,11 @@
   	<div class="col-sm-12">
       <form class="form" name="form" ng-submit="startProcess(form)" novalidate>
         <div class="form-group" ng-repeat="formProperty in processFormData.formProperties">
-            <div ng-if="{{formProperty.id}} != docType">
+            <div ng-if="{{formProperty.type}} != 'enum'">
                 <label>{{formProperty.name}} <label ng-show="{{formProperty.datePattern}}"> in format : {{formProperty.datePattern}}</label></label>
                 <input type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
             </div>          
-            <div ng-if="{{formProperty.id}} == docType">
+            <div ng-if="{{formProperty.type}} == 'enum'">
                 (комбо-бокс)
             </div>          
         </div>
