--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -8,7 +8,7 @@
   	</div>  
   	<div class="col-sm-12">
       <form class="form" name="form" ng-submit="startProcess(form)" novalidate>
-        <div ng-if="disbleStartProcess" class="form-group" ng-repeat="formProperty in processFormData.formProperties">
+        <div ng-show="!disbleStartProcess" class="form-group" ng-repeat="formProperty in processFormData.formProperties">
             <label>{{formProperty.name}} <label ng-show="{{formProperty.datePattern}}"> in format : {{formProperty.datePattern}}</label></label>
             <!--input type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/-->
             <input ng-if="formProperty.type == 'string'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
