правка рендеринга датапикера+

--- a/portal-dniprorada/client/index.html
+++ b/portal-dniprorada/client/index.html
@@ -72,6 +72,9 @@
           <script src="app/process-form/process-form.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          
+          <script src="app/main/datepicker.js"></script>          
+
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
