--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -16,8 +16,10 @@
             <input ng-if="formProperty.type == 'long'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
             <!--input ng-if="formProperty.type == 'date'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/-->
             <!--div ng-controller="DatepickerDemoCtrl"-->
-            <!-- ng-controller="myCtrl" ng-app="foo"  -->
-                <mydatepicker ng-if="formProperty.type == 'date'" class="input-group" datepicker-popup="dd/MM/yyyy" ng-model="dt" init-date="{{formProperty.value}}" date-options="dateOptions" opened="opened"  clear-text="Стереть" close-text="Закрыть"/>
+            <!-- ng-controller="myCtrl" ng-app="foo"  ng-if="formProperty.type == 'date'"  datepicker-popup="dd/MM/yyyy" init-date="{{formProperty.value}}" -->
+            <div ng-if="formProperty.type == 'date'" class="row">
+                <mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened"/>
+            </div>
                 <!--div ng-if="formProperty.type == 'date'" class="row">
                     <div class="col-md-6">
                         <p class="input-group">
