правка рендеринга датапикера++++

--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -17,7 +17,7 @@
             <!--input ng-if="formProperty.type == 'date'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/-->
             <!--div ng-controller="DatepickerDemoCtrl"-->
             <!-- ng-controller="myCtrl" ng-app="foo"  ng-if="formProperty.type == 'date'"  datepicker-popup="dd/MM/yyyy" init-date="{{formProperty.value}}" -->
-            <div ng-if="formProperty.type == 'date'" class="row">
+            <div ng-if="formProperty.type == 'date'" class="row" ng-controller="myCtrl">
                 <mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened"/>
             </div>
                 <!--div ng-if="formProperty.type == 'date'" class="row">
