--- a/portal-dniprorada/client/index.html
+++ b/portal-dniprorada/client/index.html
@@ -64,7 +64,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,client}) app/app.js -->
-          <script src="app/main/datepicker.js"></script>          
+          <!--script src="app/main/datepicker.js"></script-->
         <script src="app/app.js"></script>
           <!-- injector:js -->
           <script src="app/main/main.controller.js"></script>
