--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -15,9 +15,9 @@
             <input ng-if="formProperty.type == 'string'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
             <input ng-if="formProperty.type == 'long'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
             <!--input ng-if="formProperty.type == 'date'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/-->
-            <!--div ng-controller="DatepickerDemoCtrl"  NavbarCtrl -->
+            <!--div ng-controller="DatepickerDemoCtrl"  NavbarCtrl  ng-controller="ProcessFormCtrl" -->
             <!-- ng-controller="myCtrl" ng-app="foo"  ng-if="formProperty.type == 'date'"  datepicker-popup="dd/MM/yyyy" init-date="{{formProperty.value}}" -->
-            <div ng-if="formProperty.type == 'date'" class="row" ng-controller="ProcessFormCtrl">
+            <div ng-if="formProperty.type == 'date'" class="row">
                 <mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened"/>
             </div>
                 <!--div ng-if="formProperty.type == 'date'" class="row">
