--- a/portal-dniprorada/client/app/main/main.html
+++ b/portal-dniprorada/client/app/main/main.html
@@ -7,7 +7,7 @@
     <div class="col-lg-12">
       <h1 style="/*display: none;*/" class="page-header">Електронні послуги:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4_ col-lg-4_ col-sm-6_" ng-repeat="processDefinition in processDefinitions">
-        <li><a href="/process-form/{{processDefinition.id}}" tooltip="{{processDefinition.description}}">{{processDefinition.name}}</a></li>
+        <li><a href ng-click="authorize(processDefinition.id, processDefinition.name)" tooltip="{{processDefinition.description}}">{{processDefinition.name}}</a></li>
       </ul>
     </div>
   </div>
