правка рендеринга датапикера++++++++

--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -18,7 +18,7 @@
             <!--div ng-controller="DatepickerDemoCtrl"  NavbarCtrl  ng-controller="ProcessFormCtrl" -->
             <!-- ng-controller="myCtrl" ng-app="foo"  ng-if="formProperty.type == 'date'"  datepicker-popup="dd/MM/yyyy" init-date="{{formProperty.value}}" -->
             <div ng-if="formProperty.type == 'date'" class="row">
-                <mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened" />
+                <!--mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened" /-->
             </div>
                 <!--div ng-if="formProperty.type == 'date'" class="row">
                     <div class="col-md-6">
