--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -23,8 +23,8 @@
                <input ng-if="formProperty.type == 'date'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
 -->
             <div ng-if="formProperty.type == 'date'" class="form-control">
-                <!--mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened"  is-open="opened" opened="opened" /-->
-                <input type="text" class="input-group" datepicker-popup="dd/MM/yyyy" ng-model="dt" init-date="{{formProperty.value}}" datepicker-options="dateOptions" ng-required="true" date-options="dateOptions" close-text="Close" />
+                <!--mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened"  is-open="opened" opened="opened" /  init-date="{{formProperty.value}}"  -->
+                <input type="text" class="input-group" datepicker-popup="dd/MM/yyyy" ng-model="dt" datepicker-options="dateOptions" ng-required="true" date-options="dateOptions" value="{{formProperty.value}}"/>
                 <span class="input-group-btn">
                   <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
