--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -24,10 +24,11 @@
 -->
             <div ng-if="formProperty.type == 'date'" class="form-control">
                 <!--mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened"  is-open="opened" opened="opened" /  init-date="{{formProperty.value}}"  -->
-                <input type="text" class="input-group" datepicker-popup="dd/MM/yyyy" ng-model="dt" datepicker-options="dateOptions" ng-required="true" date-options="dateOptions" value="{{formProperty.value}}"/>
+                <input type="text" ng-click="open($event)" class="input-group" datepicker-popup="dd/MM/yyyy" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" date-options="dateOptions" value="{{formProperty.value}}"/>
                 <span class="input-group-btn">
                   <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
+                <button type="button" class="btn btn-sm btn-default" ng-click="dt = '2009-08-24'">2009-08-24</button>
             </div> 
                
                
