--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -22,14 +22,15 @@
 <!--
                <input ng-if="formProperty.type == 'date'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value"/>
 -->
-            <div ng-if="formProperty.type == 'date'" class="form-control">
+            <input ng-if="formProperty.type == 'date'" class="form-control input-group" name="dt" type="text" ng-click="open($event,'dt')" datepicker-popup="dd/MM/yyyy" ng-model="formData.dt" is-open="datepickers.dt" datepicker-options="dateOptions" ng-required="true" date-options="dateOptions" value="{{formProperty.value}}"/>
+<!--            <div ng-if="formProperty.type == 'date'" class="form-control"> -->
                 <!--mydatepicker class="input-group" ng-model="dt" date-options="dateOptions" opened="opened"  is-open="opened" opened="opened" /  init-date="{{formProperty.value}}"  -->
-                <input name="dt" type="text" ng-click="open($event,'dt')" class="input-group" datepicker-popup="dd/MM/yyyy" ng-model="formData.dt" is-open="datepickers.dt" datepicker-options="dateOptions" ng-required="true" date-options="dateOptions" value="{{formProperty.value}}"/>
-                <span class="input-group-btn">
+<!--                <input name="dt" type="text" ng-click="open($event,'dt')" class="input-group" datepicker-popup="dd/MM/yyyy" ng-model="formData.dt" is-open="datepickers.dt" datepicker-options="dateOptions" ng-required="true" date-options="dateOptions" value="{{formProperty.value}}"/>-->
+                <!--span class="input-group-btn">
                   <button class="btn btn-default" ng-click="open($event,'dt')"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
-                <button type="button" class="btn btn-sm btn-default" ng-click="formData.dt = '2009-08-24'">2009-08-24</button>
-            </div> 
+                <button type="button" class="btn btn-sm btn-default" ng-click="formData.dt = '2009-08-24'">2009-08-24</button-->
+<!--            </div> -->
                
                
           <!--   <div ng-if="formProperty.type == 'date'" class="row">
