--- a/portal-dniprorada/client/app/process-form/process-form.html
+++ b/portal-dniprorada/client/app/process-form/process-form.html
@@ -10,10 +10,14 @@
             <form class="form" name="form" ng-submit="startProcess(form)" novalidate>
                 <div class="form-group" ng-repeat="formProperty in processFormData.formProperties">
                     <label>{{formProperty.name}}</label>
-                    <input ng-if="formProperty.type == 'string'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value" ng-required="formProperty.required"/>
-                    <input ng-if="formProperty.type == 'long'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value" ng-required="formProperty.required"/>
-                    <input ng-if="formProperty.type == 'date'" class="form-control input-group" name="{{formProperty.id}}" type="text" ng-click="open($event,'dt')" datepicker-popup="dd/MM/yyyy" ng-model="formData.dt" is-open="datepickers.dt" datepicker-options="dateOptions" date-options="dateOptions" value="{{formProperty.value}}" ng-required="formProperty.required"/>
-                    <select ng-if="formProperty.type == 'enum'" class="form-control" name="{{formProperty.id}}" ng-model="formProperty.value" ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in formProperty.enumValues" ng-required="formProperty.required"></select>
+                    <input ng-if="formProperty.type == 'string'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value" ng-required="formProperty.required"
+                    ng-disabled="isClientInfo(formProperty)"/>
+                    <input ng-if="formProperty.type == 'long'" type="text" name="{{formProperty.id}}" class="form-control" ng-model="formProperty.value" ng-required="formProperty.required" 
+                    ng-disabled="isClientInfo(formProperty)"/>
+                    <input ng-if="formProperty.type == 'date'" class="form-control input-group" name="{{formProperty.id}}" type="text" ng-click="open($event,'dt')" datepicker-popup="dd/MM/yyyy" ng-model="formData.dt" is-open="datepickers.dt" datepicker-options="dateOptions" date-options="dateOptions" value="{{formProperty.value}}" ng-required="formProperty.required"
+                    ng-disabled="isClientInfo(formProperty)"/>
+                    <select ng-if="formProperty.type == 'enum'" class="form-control" name="{{formProperty.id}}" ng-model="formProperty.value" ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in formProperty.enumValues" ng-required="formProperty.required"
+                    ng-disabled="isClientInfo(formProperty)"></select>
                     <div class="processFormErrorRequiredField" ng-show="form.$submitted || form.{{formProperty.id}}.$touched">
                         <span ng-show="form.{{formProperty.id}}.$error.required">Заповніть поле {{formProperty.name}}</span>                    
                     </div>
