adding empty tasks page, redirecting to login page if user is logged out

--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -23,6 +23,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/tasks/tasks.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -70,6 +71,8 @@
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/tasks/tasks.controller.js"></script>
+          <script src="app/tasks/tasks.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/base64.js"></script>
           <script src="components/auth/user.service.js"></script>
