--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -78,6 +78,7 @@
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/task/task.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
