basic task event UI
- add task event directive to show event message
- two events support only: comment and user assign
- update bootstrap to 3.3.4
- add angular-moment

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -23,9 +23,9 @@
     			</form>
     		</div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <ul class="list-unstyled">
-            <li ng-repeat="event in events">
-              {{ event.action }}
+          <ul class="media-list">
+            <li class="media" ng-repeat="event in events">
+              <task-event event="event"></task-event>
             </li>
           </ul>
         </div>
