--- a/portal-php/public_html/mockup/index.html
+++ b/portal-php/public_html/mockup/index.html
@@ -46,15 +46,17 @@
          </div>
       </nav>
       <br>
-      <br>	
+      <br>
       <div class="container">
          <div class="row">
             <div class="col-md-6 col-md-offset-3">
-               <div class="input-group input-group-lg">
-                  <div class="input-group-addon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></div>
-                  <input type="text" class="form-control" placeholder="Пошук послуги">
-                  <div class="input-group-addon"><span class="caret"></span></div>
+               <div class="big-inner-addon">
+                  <span class="glyphicon glyphicon-search al-left" aria-hidden="true"></span>
+                  <input type="text" class="form-control input-lg" placeholder="Пошук послуги">
+                  <a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
                </div>
+               <br>
+               <br>
             </div>
          </div>
          <h1>Громадянам</h1>
@@ -198,7 +200,7 @@
       </div>
       <footer class="footer">
          <div class="container">
-            <p class="text-muted text-center">&copy; i.gov.ua 2015 - Усі права застережено</p>
+            <p class="text-muted text-center"> i.gov.ua @ Зроблено ІТ-волонтерами України</p>
          </div>
       </footer>
    </body>
