journal html template added

--- a/portal-php/public_html/mockup/index.html
+++ b/portal-php/public_html/mockup/index.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             </button>
             <div class="navbar-header">
-               <a class="navbar-brand" href="#">i.gov.ua</a>
+               <a class="navbar-brand" href="index.html">i.gov.ua</a>
                <p class="sitename">Портал державних послуг</p>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -42,7 +42,7 @@
                      </a>
                   </li>
                   <li>
-                     <a href="#">
+                     <a href="journal.html">
                         <h4>Мій журнал</h4>
                      </a>
                   </li>
@@ -60,8 +60,6 @@
                   <input type="text" class="form-control input-lg" placeholder="Пошук послуги">
                   <a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
                </div>
-               <br>
-               <br>
             </div>
          </div>
          <h1>Громадянам</h1>
