--- a/portal-php/public_html/mockup/journal.html
+++ b/portal-php/public_html/mockup/journal.html
@@ -24,7 +24,7 @@
 				<span class="icon-bar"></span>
 				</button>
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#">i.gov.ua</a>
+					<a class="navbar-brand" href="index.html">i.gov.ua</a>
 					<br>
 					<p class="sitename">Портал державних послуг</p>
 				</div>
@@ -41,7 +41,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="journal.html">
 								<h4>Мій журнал</h4>
 							</a>
 						</li>
@@ -62,6 +62,77 @@
 						<input type="text" class="form-control" placeholder="Пошук">
 						<a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<table class="table">
+						<tr class="active">
+							<td colspan="2">
+								<p class="text-muted"><strong>Березень 2015</strong></p>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								13 березня
+							</td>
+							<td>
+								<a href='#'>Тендерний комітет КМДА</a> запросив доступ до Вашого документу <a href="#">Довідка про несудимість.</a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								7 березня
+							</td>
+							<td>
+								<a href='#'>МВС м. Львів</a> завантажив у Ваш розділ <a href="#">Мої документи</a> документ <a href="#">Довідка про несудимість.</a>
+							</td>
+						</tr>
+						<tr class="active">
+							<td colspan="2">
+								<p class="text-muted"><strong>Лютий 2015</strong></p>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								23 лютого
+							</td>
+							<td>
+								Ви скористалися послугою <a href="#">Отримати Довідку про несудимість.</a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								15 лютого
+							</td>
+							<td>
+								Ви надали доступ до Вашого документу <a href="#">Паспорт</a> громадянину Михайло Рогальский (067 564 32 45).
+							</td>
+						</tr>
+						<tr>
+							<td>
+								10 лютого
+							</td>
+							<td>
+								<a href='#'>Візовий центр Великобританії</a> запросив доступ до Ваших документів <a href="#">Громадянський паспорт</a>
+								та <a href="#">Довідка про доходи від банку (Ошадбанк)</a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								5 лютого
+							</td>
+							<td>
+								<a href='#'>Ощадбанк</a> завантажив у Ваш розділ <a href="#">Мої документи</a> документ
+								<a href="#">Довідка про доходи від банку (Ошадбанк)</a>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<a href="#">Показати ще</a>
 				</div>
 			</div>
 		</div>
