--- a/portal-php/public_html/mockup/journal.html
+++ b/portal-php/public_html/mockup/journal.html
@@ -115,7 +115,7 @@
 							</td>
 							<td>
 								<a href='#'>Візовий центр Великобританії</a> запросив доступ до Ваших документів <a href="#">Громадянський паспорт</a>
-								та <a href="#">Довідка про доходи від банку (Ошадбанк)</a>
+								та <a href="#">Довідка про доходи від банку (Ощадбанк).</a>
 							</td>
 						</tr>
 						<tr>
@@ -124,7 +124,7 @@
 							</td>
 							<td>
 								<a href='#'>Ощадбанк</a> завантажив у Ваш розділ <a href="#">Мої документи</a> документ
-								<a href="#">Довідка про доходи від банку (Ошадбанк)</a>
+								<a href="#">Довідка про доходи від банку (Ощадбанк).</a>
 							</td>
 						</tr>
 					</table>
