--- a/portal-php/public_html/mockup/index.html
+++ b/portal-php/public_html/mockup/index.html
@@ -35,7 +35,7 @@
                      </a>
                   </li>
                   <li>
-                     <a href="#">
+                     <a href="documents.html">
                         <h4>
                         Мої документи
                         <h4>
@@ -50,8 +50,6 @@
             </div>
          </div>
       </nav>
-      <br>
-      <br>
       <div class="container">
          <div class="row">
             <div class="col-md-6 col-md-offset-3">
