--- a/portal-php/public_html/mockup/journal.html
+++ b/portal-php/public_html/mockup/journal.html
@@ -36,7 +36,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="documents.html">
 								<h4>Мої документи<h4>
 							</a>
 						</li>
@@ -49,8 +49,6 @@
 				</div>
 			</div>
 		</nav>
-		<br>
-		<br>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
