documents-notify template

--- a/portal-php/public_html/mockup/documents.html
+++ b/portal-php/public_html/mockup/documents.html
@@ -39,7 +39,7 @@
 						</li>
 						<li>
 							<a href="documents.html">
-								<h4>Мої документи<h4>
+								<h4>Мої документи <span class="badge">1</span><h4>
 							</a>
 						</li>
 						<li>
@@ -70,6 +70,31 @@
 						організаціям). Згідно <a href="#">закону №9157-VII від 01.10.2015</a> надання доступу до електронного образу документу на порталі i.gov.ua
 						рівносильне наданню документу в паперовому оригіналі
 					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					
+					  <div class="notification-info">
+					  <div class="row">
+					  	<div div class="col-md-10">
+					    <p class="notification-header">
+					    	Запит на доступ до документу
+					    </p>
+					    <p class="notification-body">
+					    	<a href="#">Тендерний комітет Одеської обласної державної адміністрації</a> надіслав запит на документ
+					    	<a href="#">Довідка про несудимість</a>
+					    </p>
+					    </div>
+					    <div class="col-md-2">	
+					    <div class="notification-button-group pull-right">
+						    <button type="button" class="btn btn-success">Погодити</button><br>
+						    <button type="button" class="btn btn-danger">Відхилити</button>
+					    </div>
+					  	</div>
+					  </div>
+					  </div>
+					
 				</div>
 			</div>
 			<div class="row">
