--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -1,35 +1,51 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div class="container">
 	<div class="row">
-		<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 			<ul class="list-unstyled">
         <li ng-repeat="task in tasks">
           <span ng-click="selectTask(task.id)">{{ task.name }}</span>
         </li>
       </ul>
 		</div>
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-    	<div class="row">
-    		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    			<span>Події</span>
-    		</div>
-    		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    			<form class="form-inline" action="" method="post" role="form">
-    				<div class="form-group">
-    					<label for=""></label>
-    					<input type="text" class="form-control" name="" id="" >
-    				</div>
-    				<button type="submit" class="btn btn-primary">Створити</button>
-    			</form>
-    		</div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <ul class="media-list">
-            <li class="media" ng-repeat="event in events">
-              <task-event event="event"></task-event>
-            </li>
-          </ul>
-        </div>
+
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+      <h3 ng-show="taskForm == null">Завантаження ...</h3>
+
+      <div ng-repeat="item in taskForm">
+        <p ng-if="item.type == 'string' || item.type == 'long' || item.type == 'date'">
+          <label>{{item.name}}</label>
+          <input class="form-control" ng-disabled="!item.writable" ng-required="item.required" ng-model="item.value"/>
+        </p>
+
+        <p ng-if="item.type == 'enum'">
+          <label>{{item.name}}</label>
+          <select class="form-control" ng-model="item.value" ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues" ng-required="item.required" ng-disabled="!item.writable"></select>  
+        </p>
+
+        <div ng-if="item.type != 'string' && item.type != 'long' && item.type != 'date' && item.type != 'enum'">{{item}}</div>
       </div>
+      <p>
+        <button ng-hide="taskForm == null" class="btn btn-success">Опрацювати</button>
+      </p>
+    </div>
+
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">	
+    	<h4>Події</h4>	
+
+			<form class="form-inline" action="" method="post" role="form">
+				<div class="form-group">
+					<label for=""></label>
+					<input type="text" class="form-control" name="" id="" >
+				</div>
+				<button type="submit" class="btn btn-primary">Створити</button>
+			</form>
+		
+      <ul class="media-list">
+        <li class="media" ng-repeat="event in events">
+          <task-event event="event"></task-event>
+        </li>
+      </ul>
     </div>
 	</div>
 </div>
