--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -2,10 +2,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-			<ul class="list-unstyled">
-        <li ng-repeat="task in tasks">
-          <span ng-click="selectTask(task.id)">{{ task.name }}</span>
-        </li>
+      <ul class="nav nav-tabs nav-stacked col-md-4_ col-lg-4_ col-sm-6_" ng-repeat="task in tasks">
+        <li><a href="#" tooltip="{{task.description}}" ng-click="selectTask(task.id)">{{ task.name }}</a></li>
       </ul>
 		</div>
 
