--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -74,6 +74,7 @@
           <!-- injector:js -->
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
+          <script src="app/main/error.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/taskEvent/taskEvent.directive.js"></script>
