--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
       <ul class="nav nav-tabs nav-stacked col-md-4_ col-lg-4_ col-sm-6_" ng-repeat="task in tasks">
-        <li><a href="#" tooltip="{{task.description}}" ng-click="selectTask(task)">{{ task.name }}</a></li>
+        <li><a href="#" tooltip="{{task.description}}" ng-click="selectTask(task)" ng-class="{active: isTaskSelected(task)}">{{ task.name }}</a></li>
       </ul>
 		</div>
 
