--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -21,7 +21,7 @@
 		</div>
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <h3 ng-show="taskForm == null && !error">Завантаження ...</h3>
+      <h3 ng-show="selectedTask && taskForm == null && !error">Завантаження ...</h3>
 
       <show-error data="error" ng-show="error"></show-error>
 
