Dynamic loading of modules.

--- a/portal-php/public_html/design/src/index.html
+++ b/portal-php/public_html/design/src/index.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- build:section layout.header -->
     <!-- /build -->
+	<div ui-view=""></div>
 	<!-- build:section layout.footer -->
     <!-- /build -->
 	<script data-main="./js/main" src="./js/require.js"></script>
